--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "homepage": "https://<ваш-username>.github.io/<имя-репозитория>/",
   "scripts": {
+    "start": "react-scripts start",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
+    
   },
   "dependencies": {
     "react": "^19.1.1",
