--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "homepage": "https://helplessv.github.io/pomodoroTracker/",
+  "homepage": "https://helplessv.github.io/PomodoroTracker/",
   "scripts": {
     "start": "react-scripts start",
     "dev": "vite",
